--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -1,5 +1,19 @@
 <html lang=en>
+<head>
+<style>
+ .banner{
+	width: 100%;
+	height: 40px;
+	padding-top: 15px;
+	padding-bottom: 15px;
+	background: #444;
+	color: #bbeebb;
+	font-family: trebuchet MS;
+	text-align:center;
+}
+</style>
+</head>
 	<head>
-		<h1>Logistical Operations Service Tracker</h1>
+		<h1 class=banner>Logistical Operations Service Tracker</h1>
 	</head>
 </html>
