Added comments, cleaned up formatting

--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -7,11 +7,19 @@
 	<fieldset style=background:#ddd>
 		<a><b>Login</b></a>
 		<form action="" method="post" style=padding-top:8px>
-			<label>Username: </label>
-			<input type="text" name="username" required><br>
-			<label>Password: </label>
-			<input type="password" name="password" required><br>
-			<input type="submit" value="Log in">
+			<table>
+			<tr>
+				<td><label>Username: </label></td>
+				<td><input type="text" name="username" required></td>
+			</tr>
+			<tr>
+				<td><label>Password: </label></td>
+				<td><input type="password" name="password" required></td>
+			</tr>
+			<tr>
+				<td><input type="submit" value="Log in"></td>
+			</tr>
+			</table>
 		</form>
 	</fieldset>
 </body>
